syntax = "proto3";

option java_package = "com.damiandantas.daylighthabits.proto";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME;

message AlertScheduleRepositoryProto {
  bool has_sunrise = 1;
  AlertScheduleProto sunrise = 2;

  bool has_sunset = 3;
  AlertScheduleProto sunset = 4;
}

message AlertScheduleProto {
  int64 notice_period = 2;
  bool is_enabled = 3;
}
